--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "svg.preview.background": "black"
+    "svg.preview.background": "black",
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#253115",
+        "titleBar.activeBackground": "#33451D",
+        "titleBar.activeForeground": "#F9FBF6"
+    }
 }
